--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -62,13 +62,37 @@ msgid "Time between checks (seconds)"
 msgstr ""
 
 msgctxt "#30010"
-msgid "Select recordings to archive"
+msgid "Advanced"
 msgstr ""
 
 msgctxt "#30011"
-msgid "OK"
+msgid "Expand title with seasosn/episode info"
 msgstr ""
 
 msgctxt "#30012"
+msgid "Expand title with channel info"
+msgstr ""
+
+msgctxt "#30013"
+msgid "Expand title with timer info"
+msgstr ""
+
+msgctxt "#30014"
+msgid "Create separate directory per title"
+msgstr ""
+
+msgctxt "#30015"
+msgid "Create separate directory per genre"
+msgstr ""
+
+msgctxt "#30020"
+msgid "Select recordings to archive"
+msgstr ""
+
+msgctxt "#30021"
+msgid "OK"
+msgstr ""
+
+msgctxt "#30022"
 msgid "Cancel"
 msgstr ""
