--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -17,18 +17,6 @@ msgstr ""
 "Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
-msgctxt "Addon Summary"
-msgid "Convert VDR Recordings into mp4 video files."
-msgstr ""
-
-msgctxt "Addon Description"
-msgid "This addon lets you select locally stored VDR recordings for conversion to mp4 video files and archiving at the configured destination. The conversion is handled by a service which runs in the background."
-msgstr ""
-
-msgctxt "Addon Disclaimer"
-msgid "Use at your own risk"
-msgstr ""
-
 msgctxt "#30000"
 msgid "General"
 msgstr ""
@@ -123,6 +111,10 @@ msgstr ""
 
 msgctxt "#30052"
 msgid "Cancel"
+msgstr ""
+
+msgctxt "#30053"
+msgid "Currently no recordings are available"
 msgstr ""
 
 msgctxt "#30100"
