Allow archivng in selectable video formats other than mp4: mkv, mov, wtv

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -137,6 +137,10 @@ msgctxt "#30030"
 msgid "Subtitles"
 msgstr ""
 
+msgctxt "#30031"
+msgid "Output format"
+msgstr ""
+
 msgctxt "#30035"
 msgid "Conversion"
 msgstr ""
