--- a/resources/language/German/strings.po
+++ b/resources/language/German/strings.po
@@ -137,6 +137,10 @@ msgctxt "#30030"
 msgid "Subtitles"
 msgstr "Untertitel"
 
+msgctxt "#30031"
+msgid "Output format"
+msgstr "Ausgabeformat"
+
 msgctxt "#30035"
 msgid "Conversion"
 msgstr "Umwandlung"
