More code cleanup

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -157,6 +157,10 @@ msgctxt "#30042"
 msgid "Configuration error. Check log file for details"
 msgstr ""
 
+msgctxt "#30043"
+msgid "Archiving started"
+msgstr ""
+
 msgctxt "#30050"
 msgid "Select recordings to archive"
 msgstr ""
